[gd_scene load_steps=3 format=3 uid="uid://v57hmenejm6r"]

[ext_resource type="Script" uid="uid://cgca1o7cpcrt6" path="res://src/ui/account_management/name/name_selector.gd" id="1_q8iwh"]
[ext_resource type="Texture2D" uid="uid://dsmy5v4p8itqn" path="res://src/ui/account_management/name/arrow_button.png" id="2_fk1o4"]

[node name="NameSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q8iwh")
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -33.5
offset_right = 136.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="FirstPreviousButton" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("2_fk1o4")
ignore_texture_size = true
stretch_mode = 5

[node name="FirstNameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Slanted"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FirstNextButton" type="TextureButton" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("2_fk1o4")
ignore_texture_size = true
stretch_mode = 5
flip_v = true

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="LastPreviousButton" type="TextureButton" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("2_fk1o4")
ignore_texture_size = true
stretch_mode = 5

[node name="LastNameLabel" type="Label" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Fish"
horizontal_alignment = 1

[node name="LastNextButton" type="TextureButton" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("2_fk1o4")
ignore_texture_size = true
stretch_mode = 5
flip_v = true

[node name="ContinueButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -172.0
offset_top = -71.0
offset_right = -25.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "Contnue"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -353.0
offset_top = 181.0
offset_right = 354.0
offset_bottom = 329.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="UsernameLineEdit" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
placeholder_text = "Enter your username..."
alignment = 1
caret_blink = true

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
